RbA Build/src/objects/rSuite_Financing_Option__c.object
<CustomObject>
    <description>An rSuite Financing Option is a grouping of Store Finance Programs of the same type.  (they should all have the same record types)  They are grouped together for display in rSuite.  For instance there could be a grouping of Bridge Loans or a grouping of payment sensitive installment loans.</description>
    <fields>
        <fullName>Card_Title__c</fullName>
        <description>rSuite - Financing Option Card Title in Price Preso</description>
        <inlineHelpText>Financing Option Card Title in Price Preso</inlineHelpText>
        <label>Card Title</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disclosure__c</fullName>
        <description>Disclosre for all Finance Programs linked to this option</description>
        <inlineHelpText>Enter the Disclosure text for the finance programs linked to this options</inlineHelpText>
        <label>Disclosure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Down_Payment_Terms__c</fullName>
        <description>Down Payment terms for all financing programs associated to this option</description>
        <inlineHelpText>Enter the Down Payment Terms to be displayed in Price Preso for all financing programs associated to this option</inlineHelpText>
        <label>Down Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <description>Used to filter the type of Store Finance Programs that can be attached to this Store Financing Option - values need to match the Record Types of Store Financing Programs</description>
        <inlineHelpText>Select the type of Store Finance Programs that can be attached to this Store Financing Option</inlineHelpText>
        <label>Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment Loan</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Terms__c</fullName>
        <description>Interest terms for all financing programs associated to this option</description>
        <inlineHelpText>Enter the Interest Terms to be displayed in Price Preso for all financing programs associated to this option</inlineHelpText>
        <label>Interest Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language for all financing programs associated to this option</description>
        <inlineHelpText>Enter the language to be displayed in Price Preso for all financing programs associated to this option</inlineHelpText>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIWP_Down_Payment_Terms__c</fullName>
        <description>Holds the down payment terms for No Interest With Payment (NIWP) bridge loans</description>
        <inlineHelpText>Enter the down payment terms for NIWP Brigde loans</inlineHelpText>
        <label>NIWP Down Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIWP_Interest_Terms__c</fullName>
        <description>Holds the interest terms for No Interest With Payment (NIWP) bridge loans</description>
        <inlineHelpText>Enter the interest terms for NIWP Brigde loans</inlineHelpText>
        <label>NIWP Interest Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIWP_Payment_Terms__c</fullName>
        <description>Holds the payment terms for No Interest With Payment (NIWP) bridge loans</description>
        <inlineHelpText>Enter the payment terms for NIWP Brigde loans</inlineHelpText>
        <label>NIWP Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Order__c</fullName>
        <description>This is the order which financing option types are presented in rSuite</description>
        <inlineHelpText>Select an option order.  This is the order which financing option types are presented in rSuite.  Lower numbers will be displayed before higher numbers.</inlineHelpText>
        <label>Option Order</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>Payment terms for all financing programs associated to this option</description>
        <inlineHelpText>Payment terms for all financing programs associated to this option</inlineHelpText>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Configuration__c</fullName>
        <description>Store Configuration for this Store Financing Option</description>
        <inlineHelpText>Select the Store Configuration</inlineHelpText>
        <label>Store Configuration</label>
        <referenceTo>Store_Configuration__c</referenceTo>
        <relationshipLabel>rSuite Financing Options</relationshipLabel>
        <relationshipName>rSuite_Financing_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tap_to_Reveal_Interest_Rate_or_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <description>You have the option to reveal the Interest Rate and Time Period (Term) using a separate tap.  This allows the rep to focus on the monthly payment first before discussing interest rate and term. If checked this option is turned on.</description>
        <inlineHelpText>You have the option to reveal the Interest Rate and Time Period (Term) using a separate tap.  This allows the rep to focus on the monthly payment first before discussing interest rate and term.  Check if you want this option turned on.</inlineHelpText>
        <label>Tap to Reveal Interest Rate or Term</label>
        <type>Checkbox</type>
    </fields>
    <label>rSuite Financing Option</label>
    <nameField>
        <label>rSuite Financing Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>rSuite Financing Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>